@startuml
class Author {
    - String name
    - ArrayList<Title> titles
    + Author(String name)
    + void addTitle(Title title)
    + double calculateRoyalties()
    + String getName()
}

abstract class Title {
    - String title
    - String literatureType
    - {static} final double RATE = 0.067574
    + Title(String title, String literatureType)
    + double calculateRoyalty()
    + {abstract} double calculatePoints()
    + double convertLiteratureType()
}

class AudioBook {
    - int durationInMinutes
    - int copies
    + AudioBook(String title, String literatureType, int copies, int durationInMinutes)
    + double calculatePoints()
}

class PrintedBook {
    - int pages
    - int copies
    + PrintedBook(String title, String literatureType, int copies, int pages)
    + double calculatePoints()
}

Author "1" *-- "many" Title
Title <|-- AudioBook
Title <|-- PrintedBook
@enduml